--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "a REST API server for a To Do list. Made with ExpressJS",
   "main": "src/index.js",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js",
+    "start": "node index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "format": "prettier --write \"src/**/*.js\"",
     "precommit": "npm run format && git diff --name-only --cached | xargs git add"
