--- a/package.json
+++ b/package.json
@@ -39,12 +39,14 @@
   },
   "devDependencies": {
     "chai": "^4.3.7",
+    "chai-as-promised": "^7.1.1",
     "chai-http": "^4.3.0",
     "husky": "^8.0.3",
     "mocha": "^10.2.0",
     "nodemon": "^2.0.22",
     "prettier": "^2.8.8",
-    "sinon": "^15.1.0"
+    "sinon": "^15.1.0",
+    "sinon-chai": "^3.7.0"
   },
   "husky": {
     "hooks": {
